capdb/client/capdb_client.h

typedef struct capdb_conn capdb_conn;
typedef struct capdb_net_stmt capdb_net_stmt;
#define CAPDB_NET_OK           0
#define CAPDB_NET_AUTH_FAIL    2
#define CAPDB_NET_MISUSE       3
#define CAPDB_NET_BUSY         5
int capdb_net_connect(const char *zUri, capdb_conn **pp);
int capdb_net_close(capdb_conn *p);
int capdb_net_exec(capdb_conn *p, const char *zSql,
                   int (*xCallback)(void*,int,char**,char**), void *pArg);
int capdb_net_prepare(capdb_conn *p, const char *zSql, capdb_net_stmt **pp);
int capdb_net_step(capdb_net_stmt *p);
int capdb_net_finalize(capdb_net_stmt *p);
int capdb_net_column_count(capdb_net_stmt *p);
int capdb_net_column_type(capdb_net_stmt *p, int i);
long long capdb_net_column_int64(capdb_net_stmt *p, int i);
double capdb_net_column_double(capdb_net_stmt *p, int i);
const unsigned char *capdb_net_column_text(capdb_net_stmt *p, int i);
const void *capdb_net_column_blob(capdb_net_stmt *p, int i);
/* Text column pointers are NUL-terminated copies valid until the next
** capdb_net_step/finalize on this thread. Blob pointers are length-only. */
int capdb_net_column_bytes(capdb_net_stmt *p, int i);
const char *capdb_net_errmsg(capdb_conn *p);
/* changes() / last_insert_rowid() from the most recent capdb_net_exec(),
** captured from the server's EXEC_RESULT (reliable under server-side pooling). */
int capdb_net_changes(capdb_conn *p);
long long capdb_net_last_insert_rowid(capdb_conn *p);