bindings/python/capdb/connection.py

"""CapDB DB API 2.0 connection and cursor implementation."""

from __future__ import annotations

import ctypes
import ctypes.util
import os
import threading
from typing import Any, Iterable, List, Optional, Sequence, Tuple

from .errors import (
    DatabaseError,
    IntegrityError,
    NotSupportedError,
    OperationalError,
    ProgrammingError,
)


CAPDB_OK = 0
CAPDB_ROW = 100
CAPDB_DONE = 101

CAPDB_NET_OK = 0
CAPDB_NET_AUTH_FAIL = 2
CAPDB_NET_MISUSE = 3
CAPDB_NET_BUSY = 5

CAPDB_VALUE_NULL = 0
CAPDB_VALUE_INT = 1
CAPDB_VALUE_FLOAT = 2
CAPDB_VALUE_TEXT = 3
CAPDB_VALUE_BLOB = 4

CAPDB_INTEGER = 1
CAPDB_FLOAT = 2
CAPDB_TEXT = 3
CAPDB_BLOB = 4
CAPDB_NULL = 5

CAPDB_OPEN_READWRITE = 0x00000002
CAPDB_OPEN_CREATE = 0x00000004
CAPDB_OPEN_URI = 0x00000040
CAPDB_TRANSIENT = ctypes.c_void_p(-1)


class _CapdbClient:
    """ctypes wrapper around libcapdb."""

    def __init__(self) -> None:
        path = _find_client_library()
        try:
            self.lib = ctypes.CDLL(path)
        except OSError as exc:
            raise OperationalError(f"could not load libcapdb: {exc}") from exc
        self._bind()

    def _bind(self) -> None:
        c_void_pp = ctypes.POINTER(ctypes.c_void_p)

        self.lib.capdb_net_connect.argtypes = [ctypes.c_char_p, c_void_pp]
        self.lib.capdb_net_connect.restype = ctypes.c_int
        self.lib.capdb_net_close.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_close.restype = ctypes.c_int
        self.lib.capdb_net_exec.argtypes = [
            ctypes.c_void_p,
            ctypes.c_char_p,
            ctypes.c_void_p,
            ctypes.c_void_p,
        ]
        self.lib.capdb_net_exec.restype = ctypes.c_int
        self.lib.capdb_net_prepare.argtypes = [
            ctypes.c_void_p,
            ctypes.c_char_p,
            c_void_pp,
        ]
        self.lib.capdb_net_prepare.restype = ctypes.c_int
        self.lib.capdb_net_step.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_step.restype = ctypes.c_int
        self.lib.capdb_net_finalize.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_finalize.restype = ctypes.c_int
        self.lib.capdb_net_column_count.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_column_count.restype = ctypes.c_int
        self.lib.capdb_net_column_type.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_net_column_type.restype = ctypes.c_int
        self.lib.capdb_net_column_int64.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_net_column_int64.restype = ctypes.c_longlong
        self.lib.capdb_net_column_double.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_net_column_double.restype = ctypes.c_double
        self.lib.capdb_net_column_text.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_net_column_text.restype = ctypes.c_void_p
        self.lib.capdb_net_column_blob.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_net_column_blob.restype = ctypes.c_void_p
        self.lib.capdb_net_column_bytes.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_net_column_bytes.restype = ctypes.c_int
        self.lib.capdb_net_errmsg.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_errmsg.restype = ctypes.c_char_p
        self.lib.capdb_net_changes.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_changes.restype = ctypes.c_int
        self.lib.capdb_net_last_insert_rowid.argtypes = [ctypes.c_void_p]
        self.lib.capdb_net_last_insert_rowid.restype = ctypes.c_longlong

        self.lib.capdb_open_v2.argtypes = [
            ctypes.c_char_p,
            c_void_pp,
            ctypes.c_int,
            ctypes.c_char_p,
        ]
        self.lib.capdb_open_v2.restype = ctypes.c_int
        self.lib.capdb_close.argtypes = [ctypes.c_void_p]
        self.lib.capdb_close.restype = ctypes.c_int
        self.lib.capdb_exec.argtypes = [
            ctypes.c_void_p,
            ctypes.c_char_p,
            ctypes.c_void_p,
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_char_p),
        ]
        self.lib.capdb_exec.restype = ctypes.c_int
        self.lib.capdb_prepare_v2.argtypes = [
            ctypes.c_void_p,
            ctypes.c_char_p,
            ctypes.c_int,
            c_void_pp,
            ctypes.POINTER(ctypes.c_char_p),
        ]
        self.lib.capdb_prepare_v2.restype = ctypes.c_int
        self.lib.capdb_step.argtypes = [ctypes.c_void_p]
        self.lib.capdb_step.restype = ctypes.c_int
        self.lib.capdb_finalize.argtypes = [ctypes.c_void_p]
        self.lib.capdb_finalize.restype = ctypes.c_int
        self.lib.capdb_column_count.argtypes = [ctypes.c_void_p]
        self.lib.capdb_column_count.restype = ctypes.c_int
        self.lib.capdb_column_type.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_column_type.restype = ctypes.c_int
        self.lib.capdb_column_int64.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_column_int64.restype = ctypes.c_longlong
        self.lib.capdb_column_double.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_column_double.restype = ctypes.c_double
        self.lib.capdb_column_text.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_column_text.restype = ctypes.c_void_p
        self.lib.capdb_column_blob.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_column_blob.restype = ctypes.c_void_p
        self.lib.capdb_column_bytes.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_column_bytes.restype = ctypes.c_int
        self.lib.capdb_bind_parameter_count.argtypes = [ctypes.c_void_p]
        self.lib.capdb_bind_parameter_count.restype = ctypes.c_int
        self.lib.capdb_bind_null.argtypes = [ctypes.c_void_p, ctypes.c_int]
        self.lib.capdb_bind_null.restype = ctypes.c_int
        self.lib.capdb_bind_int64.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_longlong]
        self.lib.capdb_bind_int64.restype = ctypes.c_int
        self.lib.capdb_bind_double.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_double]
        self.lib.capdb_bind_double.restype = ctypes.c_int
        self.lib.capdb_bind_text.argtypes = [
            ctypes.c_void_p,
            ctypes.c_int,
            ctypes.c_char_p,
            ctypes.c_int,
            ctypes.c_void_p,
        ]
        self.lib.capdb_bind_text.restype = ctypes.c_int
        self.lib.capdb_bind_blob.argtypes = [
            ctypes.c_void_p,
            ctypes.c_int,
            ctypes.c_void_p,
            ctypes.c_int,
            ctypes.c_void_p,
        ]
        self.lib.capdb_bind_blob.restype = ctypes.c_int
        self.lib.capdb_errmsg.argtypes = [ctypes.c_void_p]
        self.lib.capdb_errmsg.restype = ctypes.c_char_p
        self.lib.capdb_changes.argtypes = [ctypes.c_void_p]
        self.lib.capdb_changes.restype = ctypes.c_int
        self.lib.capdb_last_insert_rowid.argtypes = [ctypes.c_void_p]
        self.lib.capdb_last_insert_rowid.restype = ctypes.c_longlong


_client: Optional[_CapdbClient] = None
_client_lock = threading.Lock()


def _find_client_library() -> str:
    env_path = os.environ.get("CAPDB_LIBRARY")
    if env_path:
        return env_path

    build_dir = os.environ.get("CAPDB_BUILD")
    candidates: List[str] = []
    if build_dir:
        candidates.extend(
            os.path.join(build_dir, name)
            for name in (
                "libcapdb.so",
                "libcapdb.dylib",
                "capdb.dll",
            )
        )
    candidates.extend(
        os.path.abspath(os.path.join(os.getcwd(), name))
        for name in (
            "libcapdb.so",
            "libcapdb.dylib",
            "capdb.dll",
        )
    )
    found = ctypes.util.find_library("capdb")
    if found:
        candidates.append(found)

    for candidate in candidates:
        if os.path.exists(candidate) or os.path.sep not in candidate:
            return candidate
    return "libcapdb.so"


def _get_client() -> _CapdbClient:
    global _client
    with _client_lock:
        if _client is None:
            _client = _CapdbClient()
        return _client


def _errmsg(handle: ctypes.c_void_p) -> str:
    if not handle:
        return "no connection"
    raw = _get_client().lib.capdb_net_errmsg(handle)
    if not raw:
        return "unknown CapDB error"
    return raw.decode("utf-8", "replace")


def _raise_for_rc(rc: int, handle: ctypes.c_void_p) -> None:
    if rc == CAPDB_NET_OK:
        return
    msg = _errmsg(handle)
    if rc == CAPDB_NET_AUTH_FAIL:
        raise OperationalError(f"authentication failed: {msg}")
    if rc == CAPDB_NET_MISUSE:
        raise ProgrammingError(msg)
    if rc == CAPDB_NET_BUSY:
        raise OperationalError(msg)
    if "constraint" in msg.lower():
        raise IntegrityError(msg)
    raise DatabaseError(f"{msg} (rc={rc})")


def _embedded_errmsg(handle: ctypes.c_void_p) -> str:
    if not handle:
        return "no connection"
    raw = _get_client().lib.capdb_errmsg(handle)
    if not raw:
        return "unknown CapDB error"
    return raw.decode("utf-8", "replace")


def _raise_for_embedded_rc(rc: int, handle: ctypes.c_void_p) -> None:
    if rc in (CAPDB_OK, CAPDB_ROW, CAPDB_DONE):
        return
    msg = _embedded_errmsg(handle)
    if "constraint" in msg.lower():
        raise IntegrityError(msg)
    raise DatabaseError(f"{msg} (rc={rc})")


class Connection:
    """DB API 2.0 connection object for CapDB embedded and network sessions."""

    def __init__(self, dsn: str, timeout: float = 5.0):
        if not dsn:
            raise ValueError("DSN cannot be empty")
        if timeout <= 0:
            raise ValueError("Timeout must be positive")
        self.dsn = dsn
        self.timeout = timeout
        self._mode = "network" if dsn.startswith("capdb://") else "embedded"
        self._lock = threading.RLock()
        self._closed = False
        self._handle = ctypes.c_void_p()
        self._transaction_open = False
        self._connect()

    def _connect(self) -> None:
        client = _get_client()
        if self._mode == "network":
            rc = client.lib.capdb_net_connect(
                self.dsn.encode("utf-8"),
                ctypes.byref(self._handle),
            )
            _raise_for_rc(rc, self._handle)
            return

        path = self.dsn[5:] if self.dsn.startswith("file:") else self.dsn
        flags = CAPDB_OPEN_READWRITE | CAPDB_OPEN_CREATE | CAPDB_OPEN_URI
        rc = client.lib.capdb_open_v2(path.encode("utf-8"), ctypes.byref(self._handle), flags, None)
        _raise_for_embedded_rc(rc, self._handle)

    def _require_open(self) -> ctypes.c_void_p:
        if self._closed or not self._handle:
            raise OperationalError("Connection is closed")
        return self._handle

    def cursor(self) -> "Cursor":
        self._require_open()
        return Cursor(self)

    def commit(self) -> None:
        if self._transaction_open:
            self._exec_direct("COMMIT")
            self._transaction_open = False

    def rollback(self) -> None:
        if self._transaction_open:
            self._exec_direct("ROLLBACK")
            self._transaction_open = False

    def _exec_direct(self, sql: str) -> int:
        with self._lock:
            handle = self._require_open()
            client = _get_client()
            if self._mode == "network":
                rc = client.lib.capdb_net_exec(handle, sql.encode("utf-8"), None, None)
                _raise_for_rc(rc, handle)
                return int(client.lib.capdb_net_changes(handle))
            rc = client.lib.capdb_exec(handle, sql.encode("utf-8"), None, None, None)
            _raise_for_embedded_rc(rc, handle)
            return int(client.lib.capdb_changes(handle))
